# ChallengeIA-TangaIA

./: README.md
BackendTangaAI/: .gitignore  README.md  logs_test.txt  onboarding.py  orchestrator_graph.py  output_test.txt  publications_programmees.py  requirements.txt  test_pme.py
BackendTangaAI/api/: main.py
BackendTangaAI/crew_factory/: factory.py
BackendTangaAI/data/: memory.db-shm  memory.db-wal
BackendTangaAI/env/: pyvenv.cfg
BackendTangaAI/env/Scripts/: activate  activate.bat  dumppdf.py  jp.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
BackendTangaAI/memory/: agents.py  auth.py  credentials.py  history.py  notifications.py  store.py
BackendTangaAI/models/: schemas.py
BackendTangaAI/nodes/: graph_nodes.py
BackendTangaAI/outputs/portfolio-0760250b/: index.html  quality_assurance_report.md
BackendTangaAI/outputs/portfolio-0ae11f9a/: index.html  quality_assurance_report.md
BackendTangaAI/portfolio/: routes.py  service.py
BackendTangaAI/portfolio_crew/: README.md  design.md  pyproject.toml
BackendTangaAI/portfolio_crew/src/portfolio_crew/: crew.py  intake.py  main.py
BackendTangaAI/portfolio_crew/src/portfolio_crew/config/: agents.yaml  tasks.yaml
BackendTangaAI/rag/: __init__.py  config.py  ingest.py  qa.py  roadmap.py  routes.py  search.py
BackendTangaAI/tools/: registry.py  sales_core.py  sentiment_core.py
FrontendTangaIA/: index.html  package-lock.json  package.json  tailwind.config.js
FrontendTangaIA/src/: App.jsx  index.css
FrontendTangaIA/src/api/: client.js  toolsSchema.js
FrontendTangaIA/src/components/: Auth.jsx  (+7 more)
(+15 files in other folders)
