[project]
name = "portfolio_crew"
version = "0.1.0"
description = "portfolio_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.14.4",
]

[project.scripts]
portfolio_crew = "portfolio_crew.main:run"
run_crew = "portfolio_crew.main:run"
train = "portfolio_crew.main:train"
replay = "portfolio_crew.main:replay"
test = "portfolio_crew.main:test"
run_with_trigger = "portfolio_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
